@@ -1,3 +1,7 @@
+2001-10-16  Ross Golder  <rossg@durban.golder.org>
+
+	* libIDL.spec.in: Updated filenames/paths for libIDL2.
+
 2001-10-05  Abel Cheung  <maddog@linux.org.hk>
 
 	* libIDL-config.in: Fix output of --version and --cflags.
